CHANGE07:ROUND/MISSING-VALUES

--- a/12_Round/1_Round.ipynb
+++ b/12_Round/1_Round.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
        "4                           5.9    Africa  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
        "106.16062176165804"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,12 +143,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### specified nothing as decimal place"
+    "#### specified nothing as decimal place"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
        "106"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,12 +170,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### specified decimal place as 0"
+    "#### specified decimal place as 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
        "106.0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,12 +197,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### specified decimal place as 1"
+    "#### specified decimal place as 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
        "106.2"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,14 +221,193 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "--------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "X2ZxSvLuq1Xo"
+   },
+   "source": [
+    "#### **Question 1**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "hUEzh_dinlqP",
+    "outputId": "2a763bad-a25c-4c98-fd04-2722d958a28e"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {
+      "tags": []
+     },
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    " # 4.5 rounds to 4\n",
+    "# 4.51 rounds to 5\n",
+    " \n",
+    "round(4.576)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "C5wFbiXaqvyv"
+   },
+   "source": [
+    "#### **Question 2**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "JaQedzVIn5gU",
+    "outputId": "09b6322c-f5d3-40a9-cbc8-7c21a440ae8a"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n",
+      "12\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = round(12.5)\n",
+    "b = round(11.5)\n",
+    " \n",
+    "print(a)\n",
+    "print(b)\n",
+    "print(a-b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "DNkoiLV0qpdA"
+   },
+   "source": [
+    "#### **Question 3**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "q0VPsCBfn55D",
+    "outputId": "98b07d18-3681-4306-9a28-5a2beb3b12cc"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100.134\n"
+     ]
+    }
+   ],
+   "source": [
+    " a = 100.1342\n",
+    "print(round(a, 3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "vktCAMp5yQ2Y"
+   },
+   "source": [
+    " #### **Question 4**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "5T9Uelixn6Ww",
+    "outputId": "94400232-a999-45dc-eb0a-4190edae9c94"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=14\n",
+    "b=3\n",
+    "print (round (a/b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "99Qcf18ByYwK",
+    "outputId": "b02f5404-2d85-4cff-ca3c-b1b4c2651980"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.666666666666667"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {
+      "tags": []
+     },
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "14/3"
+   ]
   }
  ],
  "metadata": {
+  "colab": {
+   "collapsed_sections": [],
+   "name": "1_Round.ipynb",
+   "provenance": []
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -248,5 +427,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 1
 }
